--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
+    "pug-html-loader": "^1.1.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "sass-loader": "^6.0.7",
