--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
+    "image-webpack-loader": "^4.1.0",
     "node-sass": "^4.7.2",
     "pug-html-loader": "^1.1.5",
     "react": "^16.2.0",
